+ media query for Toolbar.css

--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -19,4 +19,11 @@
 
 .Logo {
   height: 80%;
+  margin-bottom: 32px;
+}
+
+@media (max-width: 499px) {
+  .DesktopOnly {
+    display: none;
+  }
 }
